baixando arquivos Steam

--- a/notebooks/scraping/baixar_base_jogos_steam.ipynb
+++ b/notebooks/scraping/baixar_base_jogos_steam.ipynb
@@ -23,17 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7db82b9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: urllib3 in c:\\users\\pedro vidal\\anaconda3\\lib\\site-packages (1.26.9)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install urllib3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3f50afd8",
    "metadata": {},
    "outputs": [],
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c0881a0c",
    "metadata": {},
    "outputs": [],
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "94397a46",
    "metadata": {},
    "outputs": [],
@@ -130,10 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "671674ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Você precisa inserir seu nome de usuário na variável usuario!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\scraping\\baixar_base_jogos_steam.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m nome_usuario \u001b[39m=\u001b[39m nome_usuario\u001b[39m.\u001b[39mstrip()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(nome_usuario) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mVocê precisa inserir seu nome de usuário na variável usuario!\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: Você precisa inserir seu nome de usuário na variável usuario!"
+     ]
+    }
+   ],
    "source": [
     "nome_usuario = nome_usuario.strip()\n",
     "if len(nome_usuario) == 0:\n",
@@ -213,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
