--- a/notebooks/scraping/baixar_base_jogos_steam.ipynb
+++ b/notebooks/scraping/baixar_base_jogos_steam.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "7db82b9b",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "3f50afd8",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "c0881a0c",
    "metadata": {},
    "outputs": [],
@@ -129,32 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "94397a46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nome_usuario=\"\""
+    "nome_usuario=\"pedrohav\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "671674ab",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Você precisa inserir seu nome de usuário na variável usuario!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\scraping\\baixar_base_jogos_steam.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m nome_usuario \u001b[39m=\u001b[39m nome_usuario\u001b[39m.\u001b[39mstrip()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(nome_usuario) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mVocê precisa inserir seu nome de usuário na variável usuario!\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mException\u001b[0m: Você precisa inserir seu nome de usuário na variável usuario!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nome_usuario = nome_usuario.strip()\n",
     "if len(nome_usuario) == 0:\n",
@@ -173,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "04db8ec8",
    "metadata": {},
    "outputs": [],
@@ -183,10 +171,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1cb7187e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Você precisa definir a quantidade de avaliações!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\scraping\\baixar_base_jogos_steam.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mif\u001b[39;00m qtde_avaliacoes \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mVocê precisa definir a quantidade de avaliações!\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: Você precisa definir a quantidade de avaliações!"
+     ]
+    }
+   ],
    "source": [
     "if qtde_avaliacoes <= 0:\n",
     "    raise Exception('Você precisa definir a quantidade de avaliações!')"
