--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -8,12 +8,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nome: _____\n",
+    "Nome: Pedro Henrique Almeida Vidal  \n",
     "\n",
-    "Nome: _____"
+    "Nome: Felipe Assed Carvalho"
    ]
   },
   {
