--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -139,12 +139,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Faça aqui uma descrição do seu assunto e o que considerou como relevante ou não relevante na classificação dos tweets (Target).\n",
     "\n",
-    "ESCREVA AQUI..."
+    "Tendo como assunto reviews de jogos na plataforma \"Steam\", fizemos a seguinte triagem:\n",
+    "0 - Opiniões sem teor julgador\n",
+    "1 - Opiniões não recomendativas \n",
+    "2 - Opiniões negativas"
    ]
   },
   {
@@ -162,14 +166,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Retirando pontuações\n",
+    "#Abstraído da aula 08 - Exercício\n",
+    "def cleanup(text):\n",
+    "    \"\"\"\n",
+    "        Função de limpeza muito simples que troca alguns sinais básicos por espaços\n",
+    "    \"\"\"\n",
+    "    #import string\n",
+    "    punctuation = '[´\"!-.:?;$'']' # Note que os sinais [] são delimitadores de um conjunto.\n",
+    "    pattern = re.compile(punctuation)\n",
+    "    text_subbed = re.sub(pattern, '', text)\n",
+    "    return text_subbed"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Criando as listas que correspondem às nossas classificações\n",
+    "neutros = []\n",
+    "positivos = []\n",
+    "negativos = []\n",
+    "#Criando variável opiniao\n",
+    "opiniao = cleanup(train.Descrição[i]).lower().split()\n",
+    "#Analisando na planilha treinamento\n",
+    "if train.iloc[1,5] == 0:\n",
+    "    termo_neutro = 0\n",
+    "    while q_neutro < len(opiniao):\n",
+    "        neutros.append(opiniao[termo_neutro])\n",
+    "        termo_neutro += 1\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
