--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -187,17 +187,20 @@
    "outputs": [],
    "source": [
     "#Criando as listas que correspondem às nossas classificações\n",
-    "neutros = []\n",
-    "positivos = []\n",
-    "negativos = []\n",
+    "ok = []\n",
+    "nao_recomenda = []\n",
     "#Criando variável opiniao\n",
     "opiniao = cleanup(train.Descrição[i]).lower().split()\n",
     "#Analisando na planilha treinamento\n",
-    "if train.iloc[1,5] == 0:\n",
-    "    termo_neutro = 0\n",
-    "    while q_neutro < len(opiniao):\n",
-    "        neutros.append(opiniao[termo_neutro])\n",
-    "        termo_neutro += 1\n",
+    "if train.iloc[1,5] == 1:\n",
+    "    termo_ok = 0\n",
+    "    while termo_ok < len(opiniao):\n",
+    "        ok.append(opiniao[termo_ok])\n",
+    "        termo_ok += 1\n",
+    "elif train.iloc[1,5] == 2:\n",
+    "    termo_nao_recomenda = 0\n",
+    "    while termo_nao_recomenda < len(opiniao):\n",
+    "        nao_recomenda.append(opiniao[termo_nao_recomenda])\n",
     "        \n",
     "\n",
     "\n",
