--- a/notebooks/scraping/baixar_base_jogos_steam.ipynb
+++ b/notebooks/scraping/baixar_base_jogos_steam.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "7db82b9b",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "3f50afd8",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "c0881a0c",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "94397a46",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "671674ab",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "04db8ec8",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "1cb7187e",
    "metadata": {},
    "outputs": [],
@@ -197,36 +197,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "393d46e9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ok! Vou baixar avaliações de jogos da Steam!\n",
-      "\n",
-      "Aguarde... Este processo pode demorar alguns minutos!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Pedro Vidal\\AppData\\Local\\Temp\\ipykernel_37548\\624825795.py:36: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  train = ltrain.append(rtrain,ignore_index = True)\n",
-      "C:\\Users\\Pedro Vidal\\AppData\\Local\\Temp\\ipykernel_37548\\624825795.py:37: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  test = ltest.append(rtest,ignore_index = True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processo finalizado!\n",
-      "\n",
-      "Geramos um arquivo chamado dados.xlsx na pasta data, confira!\n"
+     "ename": "Exception",
+     "evalue": "Arquivo dados.xlsx já existe na pasta data! Apague o arquivo caso queira gerar novamente!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\scraping\\baixar_base_jogos_steam.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m get_data(nome_usuario,qtde_avaliacoes)\n",
+      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\scraping\\baixar_base_jogos_steam.ipynb Cell 12\u001b[0m in \u001b[0;36mget_data\u001b[1;34m(usuario, avaliacoes)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#X14sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mGeramos um arquivo chamado dados.xlsx na pasta data, confira!\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#X14sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/scraping/baixar_base_jogos_steam.ipynb#X14sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mArquivo dados.xlsx já existe na pasta data! Apague o arquivo caso queira gerar novamente!\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mException\u001b[0m: Arquivo dados.xlsx já existe na pasta data! Apague o arquivo caso queira gerar novamente!"
      ]
     }
    ],
