--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 163,
    "metadata": {
     "scrolled": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4  É feio\\nNão tem akele girocóptero em camera le...     2.0  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "4  É feio\\nNão tem akele girocóptero em camera le...     2.0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "4  O jogo é muito bom, muito bom mesmo, mas infel...       2  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,12 +390,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Retirando pontuações\n",
-    "#Abstraído da aula 08 - Exercício\n",
+    "#De início, faz-se a limpeza. Para isso, define-se a função cleanup (apresentada na aula 08 - Lusíadas e Dom Casmurro) para que ocorram mudanças de sinais para strings vazias. \n",
+    "import re\n",
     "def cleanup(text):\n",
     "    \"\"\"\n",
     "        Função de limpeza muito simples que troca alguns sinais básicos por espaços\n",
@@ -404,12 +404,70 @@
     "    punctuation = '[´\"!-.:?;$'']' # Note que os sinais [] são delimitadores de um conjunto.\n",
     "    pattern = re.compile(punctuation)\n",
     "    text_subbed = re.sub(pattern, '', text)\n",
-    "    return text_subbed"
+    "    return text_subbed\n",
+    "#Em seguida, pensando nos caracteres especiais, realiza-se a seguinte sequência de códigos para que sejam removidos:\n",
+    "def acentos_especiais (texto):\n",
+    "    lista_acentos = ['ã', 'á', 'à', 'â', 'ô', 'õ', 'ó', 'ò', 'ê','è', 'é', 'í', 'ì', 'ú', 'ù']\n",
+    "    vogais = ['a', 'o', 'e', 'i', 'u']\n",
+    "    for caractere in lista_acentos:\n",
+    "        if caractere in texto:\n",
+    "            indexx = texto.index(caractere)\n",
+    "            if indexx <= 3:\n",
+    "                texto = texto.replace(caractere, vogais[0])\n",
+    "            elif indexx > 3 and indexx <= 7:\n",
+    "                texto = texto.replace(caractere, vogais[1])\n",
+    "            elif indexx > 7 and indexx <= 10:\n",
+    "                texto = texto.replace(caractere, vogais[2])\n",
+    "            elif indexx > 10 and indexx <= 12:\n",
+    "                texto = texto.replace(caractere, vogais[3])\n",
+    "            else:\n",
+    "                texto = texto.replace(caractere, vogais[4])\n",
+    "    texto = texto.replace(u'\\xa0', '')\n",
+    "    texto = texto.replace(u'\\u200b', '')\n",
+    "    texto = texto.replace(u'\\\\', '')\n",
+    "    texto = texto.replace(u'\\u200b', '')\n",
+    "    texto = texto.replace('ç', 'c')\n",
+    "    texto = texto.replace(u'\\u2019', '')\n",
+    "    texto = texto.replace(u'\\u201D', '')\n",
+    "    texto = texto.replace(u'\\u201C', '')\n",
+    "    return texto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected string or bytes-like object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\relatorio.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Agora aplica-se ambas funções acima e a função .lower visando a facilitar o manuseio das probabilidades\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dados_treinamento \u001b[39m=\u001b[39m train\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m dados_treinamento\u001b[39m.\u001b[39mreview \u001b[39m=\u001b[39m dados_treinamento\u001b[39m.\u001b[39;49mreview\u001b[39m.\u001b[39;49mapply(cleanup)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m dados_treinamento\u001b[39m.\u001b[39mreview \u001b[39m=\u001b[39m dados_treinamento\u001b[39m.\u001b[39mreview\u001b[39m.\u001b[39mapply(acentos_especiais)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m dados_treinamento\u001b[39m.\u001b[39mreview \u001b[39m=\u001b[39m dados_treinamento\u001b[39m.\u001b[39mreview\u001b[39m.\u001b[39mapply(\u001b[39mstr\u001b[39m\u001b[39m.\u001b[39mlower)\n",
+      "File \u001b[1;32mc:\\Users\\Pedro Vidal\\anaconda3\\lib\\site-packages\\pandas\\core\\series.py:4433\u001b[0m, in \u001b[0;36mSeries.apply\u001b[1;34m(self, func, convert_dtype, args, **kwargs)\u001b[0m\n\u001b[0;32m   4323\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply\u001b[39m(\n\u001b[0;32m   4324\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m   4325\u001b[0m     func: AggFuncType,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4328\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs,\n\u001b[0;32m   4329\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m Series:\n\u001b[0;32m   4330\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   4331\u001b[0m \u001b[39m    Invoke function on values of Series.\u001b[39;00m\n\u001b[0;32m   4332\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   4431\u001b[0m \u001b[39m    dtype: float64\u001b[39;00m\n\u001b[0;32m   4432\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 4433\u001b[0m     \u001b[39mreturn\u001b[39;00m SeriesApply(\u001b[39mself\u001b[39;49m, func, convert_dtype, args, kwargs)\u001b[39m.\u001b[39;49mapply()\n",
+      "File \u001b[1;32mc:\\Users\\Pedro Vidal\\anaconda3\\lib\\site-packages\\pandas\\core\\apply.py:1082\u001b[0m, in \u001b[0;36mSeriesApply.apply\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1078\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mf, \u001b[39mstr\u001b[39m):\n\u001b[0;32m   1079\u001b[0m     \u001b[39m# if we are a string, try to dispatch\u001b[39;00m\n\u001b[0;32m   1080\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapply_str()\n\u001b[1;32m-> 1082\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mapply_standard()\n",
+      "File \u001b[1;32mc:\\Users\\Pedro Vidal\\anaconda3\\lib\\site-packages\\pandas\\core\\apply.py:1137\u001b[0m, in \u001b[0;36mSeriesApply.apply_standard\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1131\u001b[0m         values \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mastype(\u001b[39mobject\u001b[39m)\u001b[39m.\u001b[39m_values\n\u001b[0;32m   1132\u001b[0m         \u001b[39m# error: Argument 2 to \"map_infer\" has incompatible type\u001b[39;00m\n\u001b[0;32m   1133\u001b[0m         \u001b[39m# \"Union[Callable[..., Any], str, List[Union[Callable[..., Any], str]],\u001b[39;00m\n\u001b[0;32m   1134\u001b[0m         \u001b[39m# Dict[Hashable, Union[Union[Callable[..., Any], str],\u001b[39;00m\n\u001b[0;32m   1135\u001b[0m         \u001b[39m# List[Union[Callable[..., Any], str]]]]]\"; expected\u001b[39;00m\n\u001b[0;32m   1136\u001b[0m         \u001b[39m# \"Callable[[Any], Any]\"\u001b[39;00m\n\u001b[1;32m-> 1137\u001b[0m         mapped \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39;49mmap_infer(\n\u001b[0;32m   1138\u001b[0m             values,\n\u001b[0;32m   1139\u001b[0m             f,  \u001b[39m# type: ignore[arg-type]\u001b[39;49;00m\n\u001b[0;32m   1140\u001b[0m             convert\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconvert_dtype,\n\u001b[0;32m   1141\u001b[0m         )\n\u001b[0;32m   1143\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(mapped) \u001b[39mand\u001b[39;00m \u001b[39misinstance\u001b[39m(mapped[\u001b[39m0\u001b[39m], ABCSeries):\n\u001b[0;32m   1144\u001b[0m     \u001b[39m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001b[39;00m\n\u001b[0;32m   1145\u001b[0m     \u001b[39m#  See also GH#25959 regarding EA support\u001b[39;00m\n\u001b[0;32m   1146\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39m_constructor_expanddim(\u001b[39mlist\u001b[39m(mapped), index\u001b[39m=\u001b[39mobj\u001b[39m.\u001b[39mindex)\n",
+      "File \u001b[1;32mc:\\Users\\Pedro Vidal\\anaconda3\\lib\\site-packages\\pandas\\_libs\\lib.pyx:2870\u001b[0m, in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\relatorio.ipynb Cell 16\u001b[0m in \u001b[0;36mcleanup\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m punctuation \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m[´\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m!-.:?;$\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\u001b[39m]\u001b[39m\u001b[39m'\u001b[39m \u001b[39m# Note que os sinais [] são delimitadores de um conjunto.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m pattern \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39mcompile(punctuation)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m text_subbed \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39;49msub(pattern, \u001b[39m'\u001b[39;49m\u001b[39m'\u001b[39;49m, text)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#X45sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mreturn\u001b[39;00m text_subbed\n",
+      "File \u001b[1;32mc:\\Users\\Pedro Vidal\\anaconda3\\lib\\re.py:210\u001b[0m, in \u001b[0;36msub\u001b[1;34m(pattern, repl, string, count, flags)\u001b[0m\n\u001b[0;32m    203\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msub\u001b[39m(pattern, repl, string, count\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, flags\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[0;32m    204\u001b[0m     \u001b[39m\"\"\"Return the string obtained by replacing the leftmost\u001b[39;00m\n\u001b[0;32m    205\u001b[0m \u001b[39m    non-overlapping occurrences of the pattern in string by the\u001b[39;00m\n\u001b[0;32m    206\u001b[0m \u001b[39m    replacement repl.  repl can be either a string or a callable;\u001b[39;00m\n\u001b[0;32m    207\u001b[0m \u001b[39m    if a string, backslash escapes in it are processed.  If it is\u001b[39;00m\n\u001b[0;32m    208\u001b[0m \u001b[39m    a callable, it's passed the Match object and must return\u001b[39;00m\n\u001b[0;32m    209\u001b[0m \u001b[39m    a replacement string to be used.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 210\u001b[0m     \u001b[39mreturn\u001b[39;00m _compile(pattern, flags)\u001b[39m.\u001b[39;49msub(repl, string, count)\n",
+      "\u001b[1;31mTypeError\u001b[0m: expected string or bytes-like object"
+     ]
+    }
+   ],
+   "source": [
+    "#Agora aplica-se ambas funções acima e a função .lower visando a facilitar o manuseio das probabilidades\n",
+    "dados_treinamento = train\n",
+    "dados_treinamento.review = dados_treinamento.review.apply(cleanup)\n",
+    "dados_treinamento.review = dados_treinamento.review.apply(acentos_especiais)\n",
+    "dados_treinamento.review = dados_treinamento.review.apply(str.lower)\n",
+    "dados_treinamento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,27 +483,7 @@
      ]
     }
    ],
-   "source": [
-    "#Criando as listas que correspondem às nossas classificações\n",
-    "ok = []\n",
-    "nao_recomenda = []\n",
-    "#Criando variável opiniao\n",
-    "opiniao = cleanup(train.Descrição[i]).lower().split()\n",
-    "#Analisando na planilha treinamento\n",
-    "if train.iloc[1,5] == 1:\n",
-    "    termo_ok = 0\n",
-    "    while termo_ok < len(opiniao):\n",
-    "        ok.append(opiniao[termo_ok])\n",
-    "        termo_ok += 1\n",
-    "elif train.iloc[1,5] == 2:\n",
-    "    termo_nao_recomenda = 0\n",
-    "    while termo_nao_recomenda < len(opiniao):\n",
-    "        nao_recomenda.append(opiniao[termo_nao_recomenda])\n",
-    "\n",
-    "#criando listas atualizados\n",
-    "ok2 = []\n",
-    "nao_recomenda2 = []\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
