--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -871,6 +871,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "e           357\n",
+       "de          282\n",
+       "o           280\n",
+       "jogo        268\n",
+       "que         258\n",
+       "           ... \n",
+       "busca         1\n",
+       "onlineem      1\n",
+       "partidas      1\n",
+       "formula       1\n",
+       "relatar       1\n",
+       "Length: 2883, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Tendo as palavras listadas em série, podemos, assim, usar o value_counts() para contabilizar\n",
+    "qtd_ok = serie_ok.value_counts()\n",
+    "qtd_ok"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
