--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -904,6 +904,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "de             357\n",
+       "o              345\n",
+       "e              329\n",
+       "que            304\n",
+       "jogo           301\n",
+       "              ... \n",
+       "event            1\n",
+       "participate      1\n",
+       "bucks            1\n",
+       "eventos          1\n",
+       "pissed           1\n",
+       "Length: 2979, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Para os negativos:\n",
+    "qtd_negativo = serie_negativo.value_counts()\n",
+    "qtd_negativo"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
