--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -973,6 +973,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Similarmente ao que foi feito na aula 08 (Análise se é \"Lusíadas\" ou \"Dom Casmurro\", se da o início do cálculo de probabilidades)\n",
+    "p_ok = len(tudo_ok)/len(palavras_todas_classificacoes)\n",
+    "p_neg = len(tudo_negativo)/len(palavras_todas_classificacoes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4825884414925511 0.5174576818412435\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Vendo as probabilidades das palavras:\n",
+    "print(p_ok, p_neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
