--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -899,6 +899,7 @@
    ],
    "source": [
     "#Tendo as palavras listadas em série, podemos, assim, usar o value_counts() para contabilizar\n",
+    "#Tabela de frequência Classificação Ok\n",
     "qtd_ok = serie_ok.value_counts()\n",
     "qtd_ok"
    ]
@@ -932,6 +933,7 @@
    ],
    "source": [
     "#Para os negativos:\n",
+    "#Tabela de frequência Classificação Negativo\n",
     "qtd_negativo = serie_negativo.value_counts()\n",
     "qtd_negativo"
    ]
@@ -1003,15 +1005,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['me',\n",
+       " 'arrependo',\n",
+       " 'profundamente',\n",
+       " 'de',\n",
+       " 'ter',\n",
+       " 'platinado',\n",
+       " 'essa',\n",
+       " 'merda',\n",
+       " 'de',\n",
+       " 'jogo',\n",
+       " 'de',\n",
+       " 'depravado',\n",
+       " 'coomer',\n",
+       " 'do',\n",
+       " 'krl',\n",
+       " 'não',\n",
+       " 'compre',\n",
+       " 'a',\n",
+       " 'porra',\n",
+       " 'da',\n",
+       " 'dlc',\n",
+       " 'desse',\n",
+       " 'jogo',\n",
+       " 'kobra']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Tendo isso, pode-se dar início - de fato - as contas probabilísticas.\n",
-    "#Usa-se um exemplo\n",
+    "#Usa-se um exemplo/Frase a classificar\n",
     "ex = dados_treinamento.review[292]\n",
-    "#"
+    "#Separando\n",
+    "ex = ex.split()\n",
+    "ex"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
