--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -804,6 +804,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Faremos agora:\n",
+    "1 - Guardar palavras com Pd.series\n",
+    "2 - Tabelar frequências absolutas\n",
+    "3 - Conjunto total de palavras"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -967,6 +978,7 @@
    ],
    "source": [
     "#Agora, com o objetivo de ter os dados separados da variável \"classificação ok\" e \"classificação negativo\", cria-se uma nova variável:\n",
+    "#Guardando total de palavras\n",
     "todas_classificacoes = ok + negativo \n",
     "#Pensando agora na quantidade de palavras, vemos:\n",
     "palavras_todas_classificacoes = todas_classificacoes.split()\n",
@@ -1045,6 +1057,7 @@
    "source": [
     "#Tendo isso, pode-se dar início - de fato - as contas probabilísticas.\n",
     "#Usa-se um exemplo/Frase a classificar\n",
+    "#NaveBayes\n",
     "ex = dados_treinamento.review[292]\n",
     "#Separando\n",
     "ex = ex.split()\n",
@@ -1056,7 +1069,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "probPalavraDadoPolitica = []\n",
+    "for prob in frase:\n",
+    "    if prob in tabela_politica:\n",
+    "        conta = (tabela_politica[prob]+1)/(sum(tabela_politica)+len(serie_dic))\n",
+    "        probPalavraDadoPolitica.append(conta)\n",
+    "    else:\n",
+    "        conta = (0+1)/(sum(tabela_politica)+len(serie_dic))\n",
+    "        probPalavraDadoPolitica.append(conta)\n",
+    "\n",
+    "probPalavraDadoEconomia = []\n",
+    "for prob in frase:\n",
+    "    if prob in tabela_economia:\n",
+    "        conta = (tabela_economia[prob]+1)/(sum(tabela_economia)+len(serie_dic))\n",
+    "        probPalavraDadoEconomia.append(conta)\n",
+    "    else:\n",
+    "        conta = (0+1)/(sum(tabela_economia)+len(serie_dic))\n",
+    "        probPalavraDadoEconomia.append(conta)\n",
+    "\n",
+    "probPalavraDadoPolitica = numpy.prod(probPalavraDadoPolitica)\n",
+    "probPalavraDadoEconomia = numpy.prod(probPalavraDadoEconomia)\n",
+    "\n",
+    "print(probPalavraDadoPolitica, probPalavraDadoEconomia)"
+   ]
   },
   {
    "cell_type": "markdown",
