--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -1078,7 +1078,8 @@
     }
    ],
    "source": [
-    "import numpy\n",
+    "#Analisando as probabilidades:\n",
+    "import numpy #importando a biblioteca numpy\n",
     "probabilidade_palavra_ok = []\n",
     "for probabilidade in ex:\n",
     "    if probabilidade in qtd_ok:\n",
@@ -1151,31 +1152,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Agora iremos refazer o processo que fizemos com a planilha de treinamento, mas, agora, na base de testes.\n",
+    "#Repetindo o código:\n",
+    "\n",
+    "classificacoes_planilha_teste = test['review']\n",
+    "testados = [] #criação de lista com opiniões variadas entre ok e negativo (testadas)\n",
+    "for opiniao_teste in classificacoes_planilha_teste:\n",
+    "    opiniao_teste = opiniao_teste.split()\n",
+    "    probabilidade_palavra_ok = []\n",
+    "    for probabilidade in opiniao_teste:\n",
+    "        if probabilidade in qtd_ok:\n",
+    "            operacao = (qtd_ok[probabilidade]+1)/(sum(qtd_ok)+len(serie_todas_classificacoes))\n",
+    "            probabilidade_palavra_ok.append(operacao)\n",
+    "        else:\n",
+    "            operacao = (0+1)/(sum(qtd_ok)+len(serie_todas_classificacoes))\n",
+    "            probabilidade_palavra_ok.append(operacao)\n",
+    "\n",
+    "    probabilidade_palavra_negativo = []\n",
+    "    for probabilidade in opiniao_teste:\n",
+    "        if probabilidade in qtd_negativo:\n",
+    "            operacao = (qtd_negativo[probabilidade]+1)/(sum(qtd_negativo)+len(serie_todas_classificacoes))\n",
+    "            probabilidade_palavra_negativo.append(operacao)\n",
+    "        else:\n",
+    "            operacao = (0+1)/(sum(qtd_negativo)+len(serie_todas_classificacoes))\n",
+    "            probabilidade_palavra_negativo.append(operacao)\n",
+    "\n",
+    "    probabilidade_palavra_ok = numpy.prod(probabilidade_palavra_ok)\n",
+    "    probabilidade_palavra_negativo = numpy.prod(probabilidade_palavra_negativo)\n",
+    "    if probabilidade_palavra_negativo > probabilidade_palavra_ok:\n",
+    "        testados.append('Ok')\n",
+    "    else:\n",
+    "        testados.append('Negativo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok', 'Negativo', 'Ok', 'Ok', 'Ok', 'Negativo', 'Negativo', 'Ok', 'Ok']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Vendo, agora, a lista \"Testados\":\n",
+    "print(testados)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora, analisamos a nossa avaliação manual do target e, em seguida, fazemos nosso classificador:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 1, 2, 1, 2, 2, 2, 1, 2, 2, 1, 2, 2, 1, 1, 1, 2, 2, 2, 1, 1, 2, 1, 2, 2, 2, 1, 2, 2, 2, 2, 2, 1, 1, 1, 2, 2, 2, 1, 2, 1, 1, 1, 1, 2, 2, 2, 1, 1, 2, 1, 2, 1, 2, 2, 2, 2, 2, 2, 1, 1, 1, 2, 1, 1, 2, 2, 2, 1, 2, 1, 2, 1, 2, 2, 1, 1, 1, 1, 2, 1, 2, 1, 1, 1, 2, 2, 1, 2, 1, 1, 2, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 2, 1, 2, 1, 1, 2, 1, 1, 1, 2, 2, 2, 1, 2, 2, 1, 2, 2, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 1, 1, 1, 2, 1, 2, 2, 2, 1, 2, 1, 2, 2, 2, 1, 2, 2, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 2, 2, 2, 2, 1, 1, 1, 1, 1, 2, 1, 1, 2, 2, 1, 1, 2, 2, 1, 2, 2, 1, 2, 1, 2, 2, 1, 1, 2, 2, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 2, 2, 2, 2, 1, 1, 1, 2, 2, 1, 1, 2, 1, 2, 2, 2, 2, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 2, 1, 2, 2, 1, 1, 1, 2, 2, 1, 2, 1, 1, 2, 2, 2, 1, 2, 2, 1, 2, 1, 1, 2, 2, 2, 1, 2, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 1, 1, 1, 1, 2, 1, 2, 2, 1, 2, 1, 2, 2, 1, 1, 2, 2, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 2, 1, 2, 1, 1, 1, 2, 2, 2, 2, 1, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_avaliado = [] #criação de uma lista da avaliação\n",
+    "for i in test['Target']:\n",
+    "    target_avaliado.append(i)\n",
+    "print(target_avaliado)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#Classificador\n"
+   ]
   },
   {
    "cell_type": "markdown",
