--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -1235,7 +1235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Agora analisaremos o nosso targete que avaliamos na planilha de teste"
+    "Agora analisaremos o nosso target que avaliamos na planilha de teste para que seja possível aplicar no classificador."
    ]
   },
   {
@@ -1256,6 +1256,54 @@
     "for i in test['Target']:\n",
     "    target_avaliado.append(i)\n",
     "print(target_avaliado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "138 classificações estão erradas\n",
+      "62 classificações estão certas\n",
+      "\n",
+      "11.5% verdadeiros positivos\n",
+      "31.0% falsos positivos\n",
+      "19.5% verdadeiros negativos\n",
+      "38.0% falsos negativos\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Classificador\n",
+    "contador = 0\n",
+    "qnt_diferente = 0\n",
+    "verdadeiros_positivos = 0\n",
+    "falsos_positivos = 0\n",
+    "verdadeiros_negativos = 0\n",
+    "falsos_negativos = 0\n",
+    "while contador<200:\n",
+    "    if target_avaliado[contador] != testados[contador]:\n",
+    "        qnt_diferente += 1\n",
+    "    if target_avaliado[contador] == 'Negativo' and testados[contador] == 'Negativo':\n",
+    "        verdadeiros_positivos += 1\n",
+    "    if target_avaliado[contador] == 'Ok' and testados[contador] == 'Negativo':\n",
+    "        falsos_positivos += 1\n",
+    "    if target_avaliado[contador] == 'Ok' and testados[contador] == 'Ok':\n",
+    "        verdadeiros_negativos += 1\n",
+    "    if target_avaliado[contador] == 'Negativo' and testados[contador] == 'Ok':\n",
+    "        falsos_negativos += 1\n",
+    "    contador += 1\n",
+    "    \n",
+    "print('{} classificações estão erradas'.format(qnt_diferente))\n",
+    "print('{} classificações estão certas\\n'.format((200-qnt_diferente)))\n",
+    "print('{}% verdadeiros positivos'.format(verdadeiros_positivos/2))\n",
+    "print('{}% falsos positivos'.format(falsos_positivos/2))\n",
+    "print('{}% verdadeiros negativos'.format(verdadeiros_negativos/2))\n",
+    "print('{}% falsos negativos'.format(falsos_negativos/2))"
    ]
   },
   {
