--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -372,10 +372,9 @@
    "metadata": {},
    "source": [
     "Faça aqui uma descrição do seu assunto e o que considerou como relevante ou não relevante na classificação dos tweets (Target).\n",
-    "\n",
-    "Tendo como assunto reviews de jogos na plataforma \"Steam\", fizemos a seguinte triagem:\n",
-    "1 - Opiniões sem teor julgador negativo\n",
-    "2 - Opiniões anti-recomendativas"
+    "O nosso assunto são os reviews de usuários de jogos onlines na plataforma Steam. A partir disso, tendo essas opiniões, separamos duas triagens diferentes:\n",
+    "1 - Opiniões sem teor julgador negativo, classificando tais opiniões como 'Ok'\n",
+    "2 - Opiniões anti-recomendativas, classificando tais opiniões como 'negativo'."
    ]
   },
   {
@@ -1160,7 +1159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vemos que esse resultado faz sentido, tendo em vista que o exemplo de review '292' de fato é uma opinião negativo. Com isso, de primeira análise, código funciona."
+    "Vemos que esse resultado faz sentido, tendo em vista que o exemplo de review '292' de fato é uma opinião negativa. Com isso, de primeira análise, código funciona.\n"
    ]
   },
   {
